@@ -414,6 +414,36 @@ name|unsetRootRegion
 argument_list|()
 expr_stmt|;
 block|}
+else|else
+block|{
+comment|//HBASE-1928: Check whether this server has been transitioning the ROOT table
+name|isRootServer
+operator|=
+name|master
+operator|.
+name|getRegionManager
+argument_list|()
+operator|.
+name|isRootServerCandidate
+argument_list|(
+name|deadServer
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|isRootServer
+condition|)
+block|{
+name|master
+operator|.
+name|getRegionManager
+argument_list|()
+operator|.
+name|unsetRootRegion
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 name|List
 argument_list|<
 name|byte
@@ -467,6 +497,41 @@ operator|.
 name|add
 argument_list|(
 name|r
+argument_list|)
+expr_stmt|;
+block|}
+comment|//HBASE-1928: Check whether this server has been transitioning the META table
+name|HRegionInfo
+name|metaServerRegionInfo
+init|=
+name|master
+operator|.
+name|getRegionManager
+argument_list|()
+operator|.
+name|getMetaServerRegionInfo
+argument_list|(
+name|deadServer
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|metaServerRegionInfo
+operator|!=
+literal|null
+condition|)
+block|{
+name|metaRegions
+operator|.
+name|add
+argument_list|(
+operator|new
+name|MetaRegion
+argument_list|(
+name|deadServerAddress
+argument_list|,
+name|metaServerRegionInfo
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
