@@ -3660,6 +3660,139 @@ return|return
 literal|false
 return|;
 block|}
+comment|/**    * Is this server assigned to transition the ROOT table. HBASE-1928    *    * @param server Server    * @return true if server is transitioning the ROOT table    */
+specifier|public
+name|boolean
+name|isRootServerCandidate
+parameter_list|(
+specifier|final
+name|String
+name|server
+parameter_list|)
+block|{
+for|for
+control|(
+name|RegionState
+name|s
+range|:
+name|regionsInTransition
+operator|.
+name|values
+argument_list|()
+control|)
+block|{
+if|if
+condition|(
+name|s
+operator|.
+name|getRegionInfo
+argument_list|()
+operator|.
+name|isRootRegion
+argument_list|()
+operator|&&
+operator|!
+name|s
+operator|.
+name|isUnassigned
+argument_list|()
+operator|&&
+name|s
+operator|.
+name|getServerName
+argument_list|()
+operator|!=
+literal|null
+operator|&&
+name|s
+operator|.
+name|getServerName
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|server
+argument_list|)
+condition|)
+block|{
+comment|// Has an outstanding root region to be assigned.
+return|return
+literal|true
+return|;
+block|}
+block|}
+return|return
+literal|false
+return|;
+block|}
+comment|/**    * Is this server assigned to transition a META table. HBASE-1928    *    * @param server Server    * @return if this server was transitioning a META table then a not null HRegionInfo pointing to it    */
+specifier|public
+name|HRegionInfo
+name|getMetaServerRegionInfo
+parameter_list|(
+specifier|final
+name|String
+name|server
+parameter_list|)
+block|{
+for|for
+control|(
+name|RegionState
+name|s
+range|:
+name|regionsInTransition
+operator|.
+name|values
+argument_list|()
+control|)
+block|{
+if|if
+condition|(
+name|s
+operator|.
+name|getRegionInfo
+argument_list|()
+operator|.
+name|isMetaRegion
+argument_list|()
+operator|&&
+operator|!
+name|s
+operator|.
+name|isUnassigned
+argument_list|()
+operator|&&
+name|s
+operator|.
+name|getServerName
+argument_list|()
+operator|!=
+literal|null
+operator|&&
+name|s
+operator|.
+name|getServerName
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|server
+argument_list|)
+condition|)
+block|{
+comment|// Has an outstanding meta region to be assigned.
+return|return
+name|s
+operator|.
+name|getRegionInfo
+argument_list|()
+return|;
+block|}
+block|}
+return|return
+literal|null
+return|;
+block|}
 comment|/**    * Call to take this metaserver offline for immediate reassignment.  Used only    * when we know a region has shut down cleanly.    *    * A meta server is a server that hosts either -ROOT- or any .META. regions.    *    * If you are considering a unclean shutdown potentially, use ProcessServerShutdown which    * calls other methods to immediately unassign root/meta but delay the reassign until the    * log has been split.    *    * @param server the server that went down    * @return true if this was in fact a meta server, false if it did not carry meta regions.    */
 specifier|public
 specifier|synchronized
