@@ -3189,6 +3189,81 @@ name|getServerAddress
 argument_list|()
 argument_list|)
 expr_stmt|;
+comment|//HBASE-1928: Check whether this server has been transitioning the ROOT table
+if|if
+condition|(
+name|this
+operator|.
+name|master
+operator|.
+name|getRegionManager
+argument_list|()
+operator|.
+name|isRootServerCandidate
+argument_list|(
+name|serverName
+argument_list|)
+condition|)
+block|{
+name|this
+operator|.
+name|master
+operator|.
+name|getRegionManager
+argument_list|()
+operator|.
+name|unsetRootRegion
+argument_list|()
+expr_stmt|;
+name|this
+operator|.
+name|master
+operator|.
+name|getRegionManager
+argument_list|()
+operator|.
+name|reassignRootRegion
+argument_list|()
+expr_stmt|;
+block|}
+comment|//HBASE-1928: Check whether this server has been transitioning the META table
+name|HRegionInfo
+name|metaServerRegionInfo
+init|=
+name|this
+operator|.
+name|master
+operator|.
+name|getRegionManager
+argument_list|()
+operator|.
+name|getMetaServerRegionInfo
+argument_list|(
+name|serverName
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|metaServerRegionInfo
+operator|!=
+literal|null
+condition|)
+block|{
+name|this
+operator|.
+name|master
+operator|.
+name|getRegionManager
+argument_list|()
+operator|.
+name|setUnassigned
+argument_list|(
+name|metaServerRegionInfo
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
 name|infoUpdated
 operator|=
 literal|true
